# smaa-rs

./: Cargo.toml
examples/: triangle.rs
shaders/: BlendingWeight.wgsl  BlendingWeightPS-High.spv  BlendingWeightPS-Medium.spv  BlendingWeightPS-Ultra.spv  BlendingWeightPS.wgsl  BlendingWeightVS-High.spv  BlendingWeightVS-Low.spv  BlendingWeightVS-Medium.spv  BlendingWeightVS-Ultra.spv  BlendingWeightVS.wgsl  EdgeDetection.wgsl  EdgeDetectionVS-Medium.spv  EdgeDetectionVS.wgsl  LumaEdgeDetectionPS-High.spv  LumaEdgeDetectionPS-Low.spv  LumaEdgeDetectionPS-Ultra.spv  LumaEdgeDetectionPS.wgsl  NeighborhoodBlending.wgsl  NeighborhoodBlendingAcesTonemapPS-Medium.spv  NeighborhoodBlendingPS-High.spv  NeighborhoodBlendingPS.wgsl  NeighborhoodBlendingVS-High.spv  NeighborhoodBlendingVS.wgsl  spirv.rs
src/: lib.rs  resources.rs  shader.rs
tools/generate-shaders/: Cargo.toml
tools/generate-shaders/src/: main.rs
