[package]
name = "smaa"
version = "0.4.0"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]
description = "A library for post process antialiasing using SMAA"
repository = "https://github.com/fintelia/gfx_smaa"
keywords = ["graphics", "antialiasing", "SMAA"]
categories = ["rendering", "game-engines"]
license = "MIT"
edition = "2018"

[features]
bevy = ["bevy_render2"]

[dependencies]
wgpu = "0.9.0"
bevy_render2 = { git = "https://github.com/bevyengine/bevy", branch = "pipelined-rendering", optional = true }

[dev-dependencies]
winit = "0.24.0"
futures = "0.3.14"

[workspace]
members = [".", "tools/*"]